tests/ui/impl-trait/in-trait/method-signature-matches.lt.stderr
error[E0053]: method `early` has an incompatible type for trait
  --> $DIR/method-signature-matches.rs:55:27
   |
LL |     fn early<'late, T>(_: &'late ()) {}
   |                     -     ^^^^^^^^^ expected type parameter `T`, found `()`
   |                     |
   |                     expected this type parameter
   |
note: type in trait
  --> $DIR/method-signature-matches.rs:50:28
   |
LL |     fn early<'early, T>(x: &'early T) -> impl Sized;
   |                            ^^^^^^^^^
   = note: expected signature `fn(&'early T)`
              found signature `fn(&())`
help: change the parameter type to match the trait
   |
LL -     fn early<'late, T>(_: &'late ()) {}
LL +     fn early<'late, T>(_: &'early T) {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0053`.
